force-app/main/default/objects/UHT_Tracked_Field__mdt/UHT_Tracked_Field__mdt.object-meta.xml
<CustomObject>
    <label>UHT Tracked Field</label>
    <pluralLabel>UHT Tracked Fields</pluralLabel>

    <fields>
        <fullName>ObjectApiName__c</fullName>
        <label>Object API Name</label>
        <type>Text</type>
        <length>80</length>
        <required>true</required>
    </fields>

    <fields>
        <fullName>FieldApiName__c</fullName>
        <label>Field API Name</label>
        <type>Text</type>
        <length>80</length>
        <required>true</required>
    </fields>
</CustomObject>