force-app/main/default/objects/UHT_Tracked_Field__mdt/fields/FieldType__c.field-meta.xml
<CustomField>
    <fullName>FieldType__c</fullName>
    <label>Field Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>